<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pt_repartir" />

        <EditText
            android:id="@+id/unused_points_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/force" />

        <EditText
            android:id="@+id/force_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:enabled="false"/>

        <Button
            android:id="@+id/add_strength_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signe_plus" />

        <Button
            android:id="@+id/remove_strength_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signe_moins" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dexterite" />

        <EditText
            android:id="@+id/dex_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:enabled="false"/>

        <Button
            android:id="@+id/add_dex_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signe_plus" />

        <Button
            android:id="@+id/remove_dex_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signe_moins" />

    </LinearLayout>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terminer" />

</LinearLayout>